tdf#101779 Allow multiline tooltips in template manager

Change-Id: Ia3dc45fc35aeeabfabc119bb84847c479ed32fda