include/sfx2/templateabstractview.hxx
@@ -85,6 +85,8 @@ public:
 
     virtual void MouseButtonDown( const MouseEvent& rMEvt ) override;
 
+    virtual void RequestHelp( const HelpEvent& rHEvt ) override;
+
     virtual void Command( const CommandEvent& rCEvt ) override;
 
     virtual void KeyInput( const KeyEvent& rKEvt ) override;
